# mongo-diff

./: .gitignore  README.md  diff_collections.py  mongo_diff.py  pyproject.toml
mongo_diff/: mongo_diff.py
